--- a/code/package.json
+++ b/code/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@nomicfoundation/hardhat-verify": "^2.0.14",
     "@nomiclabs/hardhat-ethers": "^2.2.3",
     "ethers": "^5.8.0",
     "hardhat": "^2.24.2"
